2006-10-12  Andrew Haley  <aph@redhat.com>

        * java/lang/InheritableThreadLocal.java: Rename NULL to sentinel.
        * java/lang/ThreadLocal.java: Likewise.

2006-09-13  Andrew Haley  <aph@redhat.com>

	* external/jsr166/java/util/concurrent/atomic/AtomicIntegerFieldUpdater.java:
	Revert previous gcj-specific disabling of checks.
	* external/jsr166/java/util/concurrent/atomic/AtomicReferenceFieldUpdater.java:
	Likewise.
	* classpath/external/jsr166/java/util/concurrent/atomic/AtomicLongFieldUpdater.java:
	Likewise.

2006-09-13  Andrew Haley  <aph@redhat.com>

	* java/util/PriorityQueue.java: Throw IllegalArgumentException for
	capacity < 1.
	(Iterator.remove()): Decrement index after removing element.

2006-12-11  Jeroen Frijters  <jeroen@frijters.net>

	* javax/net/ssl/SSLSocketFactory.java (getDefault):
	Chain exception cause.

2006-12-11  Roman Kennke  <kennke@aicas.com>

	* .classpath: Include ASM in Eclipse classpath.

2006-12-11  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/java/lang/management/BeanImpl.java:
	(translate(String)): Trim strings of whitespace.
	* javax/management/MBeanAttributeInfo.java:
	(MBeanAttributeInfo(String,String,Method,Method)):
	Use Class.getName() for normal (non-parameterized) cases.
	* javax/management/MBeanConstructorInfo.java:
	(MBeanConstructorInfo(String, Constructor)):
	Likewise.
	* javax/management/MBeanOperationInfo.java:
	(MBeanOperationInfo(String, Method)):
	Likewise.

2006-12-11  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/lang/Class.java:
	(getClasses()): Return Class<?>[].
	(internalGetClasses()): Likewise.
	(getConstructor(Class<?>...)): Add type parameter
	to parameters.
	(getDeclaredConstructor(Class<?>...)): Likewise.
	(getDeclaredClasses()): Return Class<?>[].
	(getDeclaredClasses(boolean)): Likewise.
	(getDeclaredConstructors()): Return Constructor<?>[].
	(getDeclaredConstructors(boolean)): Likewise.
	(getDeclaredMethod(String,Class<?>...)): Add type
	parameter to parameters.