@@ -1,3 +1,14 @@
+2006-12-15  Andrew Haley  <aph@redhat.com>
+
+	* tools/Makefile.am (TOOLS_ZIP): Pass -g -w to javac.
+	Create all-classes.lst that contains all source filenames.
+	Delete asm.lst.
+
+2006-12-14  Andrew Haley  <aph@redhat.com>
+
+	* tools/gnu/classpath/tools/jar/Creator.java: Close the
+	inputStream.
+
 2006-10-12  Andrew Haley  <aph@redhat.com>
 
         * java/lang/InheritableThreadLocal.java: Rename NULL to sentinel.
